@@ -1,3 +1,8 @@
+2007-08-21  Jb Evain  <jbevain@novell.com>
+
+	* Makefile: tune on `all`, and only re-installed the tuned
+	assemblies on `install`.
+
 2007-08-16  Jb Evain  <jbevain@novell.com>
 
 	* Makefile: re-install in the GAC the tuned assemblies.
